force-app/main/default/objects/AgileSprint__c/AgileSprint__c.object-meta.xml
<CustomObject>
    <label>Sprint</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>