force-app/main/default/objects/AgileSprint__c/fields/AgileEstimatedPointsSum__c.field-meta.xml
<CustomField>
    <fullName>AgileEstimatedPointsSum__c</fullName>
    <formula>BaPoints__c + DevPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total de Pontos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>