force-app/main/default/objects/AgileSprint__c/fields/BaPoints__c.field-meta.xml
<CustomField>
    <fullName>BaPoints__c</fullName>
    <label># Pontos BA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>