force-app/main/default/objects/AgileSprint__c/fields/DevPoints__c.field-meta.xml
<CustomField>
    <fullName>DevPoints__c</fullName>
    <label># Pontos Dev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>