force-app/main/default/objects/AgileSprint__c/fields/FinalDate__c.field-meta.xml
<CustomField>
    <fullName>FinalDate__c</fullName>
    <label>Data Término</label>
    <required>true</required>
    <type>Date</type>
</CustomField>