force-app/main/default/objects/AgileSprint__c/fields/NextSprint__c.field-meta.xml
<CustomField>
    <fullName>NextSprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Utilizado na automação que encerra uma work com pontos excluídos na Sprint atual e envia a work original para a Sprint indicada neste campo com a nova pontuação</inlineHelpText>
    <label>Próxima Sprint</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Team__c</field>
            <operation>equals</operation>
            <valueField>AgileSprint__c.Team__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AgileSprint__c</referenceTo>
    <relationshipLabel>Sprint Anterior</relationshipLabel>
    <relationshipName>NextSprints</relationshipName>
    <type>Lookup</type>
</CustomField>