force-app/main/default/objects/AgileSprint__c/fields/PointsExecuted__c.field-meta.xml
<CustomField>
    <fullName>PointsExecuted__c</fullName>
    <formula>(BaPoints__c + DevPoints__c) - (RemainingBaPoints__c + RemainingDevPoints__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos Concluídos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>