force-app/main/default/objects/AgileSprint__c/fields/PointsToDo__c.field-meta.xml
<CustomField>
    <fullName>PointsToDo__c</fullName>
    <formula>RemainingDevPoints__c + RemainingBaPoints__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontos a Fazer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>