force-app/main/default/objects/AgileSprint__c/fields/ReleasePhase__c.field-meta.xml
<CustomField>
    <fullName>ReleasePhase__c</fullName>
    <inlineHelpText>Este campo indica a fase da Release que esta sendo executada a Sprint.</inlineHelpText>
    <label>Fase da Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectPhases</valueSetName>
    </valueSet>
</CustomField>