force-app/main/default/objects/AgileSprint__c/fields/RemainingBaPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingBaPoints__c</fullName>
    <label># Pontos Restantes BA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>