force-app/main/default/objects/AgileSprint__c/fields/RemainingDevPoints__c.field-meta.xml
<CustomField>
    <fullName>RemainingDevPoints__c</fullName>
    <label># Pontos Restantes Dev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>