force-app/main/default/objects/AgileSprint__c/fields/SprintPlanning__c.field-meta.xml
<CustomField>
    <fullName>SprintPlanning__c</fullName>
    <label>Planejamento Sprint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>