force-app/main/default/objects/AgileSprint__c/fields/SprintReview__c.field-meta.xml
<CustomField>
    <fullName>SprintReview__c</fullName>
    <label>Finalização da Sprint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>