force-app/main/default/objects/AgileSprint__c/fields/WorkDays__c.field-meta.xml
<CustomField>
    <fullName>WorkDays__c</fullName>
    <defaultValue>8</defaultValue>
    <inlineHelpText>Neste campo devemos adicionar a quantidade de horas produtivas por dia, esse campo será considerado para calculo de capacidade de cada consultor.</inlineHelpText>
    <label>Dias Trabalhados</label>
    <precision>13</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>