force-app/main/default/objects/AgileSprint__c/fields/WorkHours__c.field-meta.xml
<CustomField>
    <fullName>WorkHours__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>Neste campo devemos preencher com os dias uteis que teremos na Sprint</inlineHelpText>
    <label>Total de Horas Trabalhaveis</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>