force-app/main/default/objects/AgileSprint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>FinalDate__c</columns>
    <columns>Status__c</columns>
    <columns>Team__c</columns>
    <columns>NextSprint__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>