force-app/main/default/objects/AgileSprint__c/listViews/Sprints_Nao_Finalizadas.listView-meta.xml
<ListView>
    <fullName>Sprints_Nao_Finalizadas</fullName>
    <columns>NAME</columns>
    <columns>StartDate__c</columns>
    <columns>FinalDate__c</columns>
    <columns>NextSprint__c</columns>
    <columns>Status__c</columns>
    <columns>Team__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Não Iniciada,Em Execução</value>
    </filters>
    <label>Sprints Não Finalizadas</label>
</ListView>